# backend

./: .gitignore  Readme.md  app.py  db.py  decode_file.py  pyproject.toml
DataBase/: dataBase.sqlite
api/: urls.py
api/v1/: urls.py
api/v1/spectacular/: urls.py
carts/models/: carts.py
carts/services/: carts..py  carts.py
common/models/: base.py
config/: settings.py  urls.py
presets/: admin.py  models.py
presets/models/: __init__.py  presets.py
users/: admin.py  models.py
users/models/: managers.py  profile.py  users.py
