[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kamil Ayupov <ayupovkamil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.0.0"
django-cors-headers = "^4.3.1"
django-environ = "^0.11.2"
django-filter = "^23.5"
djangorestframework = "^3.14.0"
black = "^24.2.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
