[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kamil Ayupov <ayupovkamil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.5"
django-cors-headers = "^4.3.1"
django-environ = "^0.11.2"
django-filter = "^23.5"
djangorestframework = "3.14.0"
black = "^24.2.0"
psycopg2 = "^2.9.9"
drf-spectacular = "0.25.1"
djoser = "^2.2.2"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.3.0"}
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
